fixed tooltip-bug when scrollbar is shown (issue 90); option to enabled/disabled tooltips
git-svn-id: http://google-mail-oex.googlecode.com/svn/trunk@211 265f038a-b1eb-9fa7-ff71-d764355a289f

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ div::selection, p::selection, img::selection {
     padding: 3px;
     opacity: 0.90;
     border-radius: 2px;
-    width: 300px;
+    width: 290px;
     font-size: 10px;
     display: none;
 }
